# regulatory-agent-kit

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml  rak-config.yaml.example  requirements-dev.txt  requirements.txt
.claude/agents/: api-agent.md  compliance-agent.md  database-agent.md  observability-agent.md  orchestration-agent.md
.claude/commands/: new-migration.md  new-module.md  quality-check.md  stack-up.md  validate-plugin.md
.claude/hooks/: post-migration.md  post-test.md  pre-commit.md
.claude/rules/: architecture.md  database.md  docker.md  plugins.md  python-style.md  testing.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  compliance-check.yml  container-build.yml  docs.yml  release.yml
.gitlab/: compliance-check.yml
audit/: documentation-audit-report.md  pedagogical-navigability-audit.md  unimplemented-features-report-2026-03-29.md  unimplemented-features-report-2026-03-31.md  unimplemented-features-report-2026-04-01.md  unimplemented-features-report.md
docker/: Dockerfile.api  Dockerfile.mlflow  Dockerfile.worker  alertmanager.yml  init-db.sql  litellm-config.yaml  pgbouncer-userlist.txt  pgbouncer.ini  prometheus.yml
docs/: README.md  architecture.md  cli-reference.md  data-model.md  framework-spec.md  getting-started.md  glossary.md  go-live-gaps.md  hld.md  implementation-design.md  infrastructure.md  lld.md  local-development.md  plugin-authoring-guide.md  plugin-template-guide.md  prd.md  regulatory-agent-kit.md  sad.md  software-architecture.md  system-design.md
docs/adr/: 001-agent-orchestration-framework.md  002-langgraph-vs-temporal-pydanticai.md  003-database-selection.md  004-python-stack.md  005-llm-observability-platform.md  006-elasticsearch-selection.md  template.md
docs/operations/: runbook.md
helm/regulatory-agent-kit/: Chart.yaml  values.yaml
infrastructure/aws/: main.tf  outputs.tf  variables.tf
infrastructure/azure/: main.tf  outputs.tf  variables.tf
infrastructure/gcp/: main.tf  outputs.tf  variables.tf
infrastructure/modules/: README.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_plugin_registry.py
regulations/: README.md
regulations/dora/: README.md  dora-ict-risk-2025.yaml  dora-incident-reporting-2025.yaml  dora-resilience-testing-2025.yaml  dora-third-party-risk-2025.yaml
regulations/examples/: README.md  example.yaml
src/regulatory_agent_kit/: __init__.py  cli.py  config.py  exceptions.py
tests/: conftest.py  helpers.py
tests/integration/: conftest.py  test_e2e_api.py  test_e2e_audit.py  test_e2e_cli.py  test_e2e_docker.py  test_e2e_event_sources.py  test_e2e_lite.py  test_e2e_plugins.py  test_e2e_workflows.py
tests/unit/: test_activities.py  test_agent_tools.py  test_agent_wiring.py  test_agents.py  test_api.py  test_ast_engine.py  test_audit_logger.py  test_cli.py  test_cli_commands.py  test_compliance_scanner.py  test_condition_dsl.py  test_condition_evaluator.py  test_config.py  test_conflict_engine.py  test_cost_estimator.py  test_crypto.py  test_custom_agent_protocol.py  test_custom_agent_tool.py  test_data_residency.py  test_data_residency_integration.py  test_database.py  test_dora_plugins.py  test_email_notifier.py  test_exceptions.py  test_fallback_routing.py  test_file_cache.py  test_file_event_source.py  test_git_client.py  test_grafana_dashboards.py  test_hashing.py  test_infrastructure.py  test_jwt_auth.py  test_kafka_credential_rotation.py  test_kafka_event_source.py  test_lite_db.py  (+31 more)
(+179 files in other folders)
