[project]
name = "regulatory-agent-kit"
version = "0.1.0"
description = "Multi-agent AI framework for automated regulatory compliance across software codebases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "regulatory-agent-kit contributors" }]
keywords = ["regulatory", "compliance", "ai", "agents", "pydantic-ai", "temporal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # Orchestration
    "temporalio>=1.24.0",
    # Agent framework
    "pydantic-ai>=1.0.0",
    # Data validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database
    "psycopg[binary,pool]>=3.2.0",
    "alembic>=1.14.0",
    # HTTP API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Search index
    "elasticsearch[async]>=8.13.0",
    # LLM gateway
    "litellm>=1.40.0",
    # Async runtime
    "uvloop>=0.20.0",
    "anyio>=4.4.0",
    # Messaging
    "confluent-kafka>=2.5.0",
    # AST parsing
    "tree-sitter>=0.22.0",
    # Templating
    "jinja2>=3.1.0",
    # YAML
    "ruamel.yaml>=0.18.0",
    # Lite Mode (SQLite)
    "aiosqlite>=0.20.0",
    # Cryptography
    "cryptography>=43.0.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Observability
    "mlflow>=2.18.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "prometheus_client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "testcontainers[postgres,elasticsearch]>=4.7.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/gallindo/regulatory-agent-kit"
Repository = "https://github.com/gallindo/regulatory-agent-kit"
Documentation = "https://github.com/gallindo/regulatory-agent-kit/tree/main/docs"
Issues = "https://github.com/gallindo/regulatory-agent-kit/issues"
Changelog = "https://github.com/gallindo/regulatory-agent-kit/blob/main/CHANGELOG.md"

[project.scripts]
rak = "regulatory_agent_kit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regulatory_agent_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
    "slow: marks tests that take a long time to run",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["regulatory_agent_kit"]

[tool.coverage.run]
source = ["regulatory_agent_kit"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
